Thu May 27 16:17:18 1993  Linus Tolke Y  (linus@bodil)

	* Distribuerat version 0.36	 	16.00

Tue May 25 17:47:28 1993  Linus Tolke Y  (linus@bodil)

	* completing-read.el, edit-text.el: Keymaps look different in
	  emacs19 - special patch updated.

Sat May 22 23:00:27 1993  Linus Tolke Y  (linus@bodil)

	* vars.el, swedish-strings.el (kom-tell-phrases-internal): Entered
	  the default server texts in vars.el, the defvar:ed variable is
	  in the language-dependant part.

Fri May 21 17:34:38 1993  Linus Tolke Y  (linus@bodil)

	* commands1.el (lyskom-mark-text): Cleaning cache of the text-stat.

Tue May 11 16:47:38 1993  Linus Tolke Y  (linus@bodil)

	* startup.el (lyskom-connect-filter): When emacs is collecting
	  longer initial package from the server we hang. Fixed using a
	  match. I the emacs splits the initial package or splits the
	  following packages there could still be a problem.

	* commands2.el (lyskom-status-pers-4): The old conf-stats are
	  thrown out before refetching them.

Sat May  8 19:48:00 1993  Linus Tolke Y  (linus@bodil)

	* swedish-strings.el, english-strings.el (kom-tell-phrases): The
	  encouragement to change this variable is removed.

Wed May  5 04:47:30 1993  Linus Tolke Y  (linus@bodil)

	* async.el, commands1.el, commands2.el, completing-read.el,
	  edit-text.el, internal.el, lyskom-rest.el, prioritize.el
          (lyskom-message, lyskom-error): rewritten all the calls to
	  lyskom-message and lyskom-error with explicit format-strings.
	* parse.el, startup.el, lyskom-rest.el, vars.el (debug): rewritten
	  the debug-on-communications format. We now log the process.
	  We also log all lyskom-processes in the same debug-buffert, the
	  replies-buffer becomes visible if debugging.
	* startup.el (lyskom-clear-vars, lyskom): Rewritten the
	  login-procedure. 

Thu Apr 29 00:07:36 1993  Linus Tolke Y  (linus@bodil)

	* edit-text.el (lyskom-create-text-handler): Better error message.

	* commands1.el (lyskom-add-member-answer,